# NetProgProject

./: .gitignore  README.md  RaycastGame.sln
Nine_Project/: CMakeLists.txt  Nine_Project.h
Nine_Project/Nine_Project_Installer/: Nine_Project_Installer.vdproj
Nine_Project/Nine_Project_Installer/Debug/: Nine_Project_Installer.msi
RaycastGame/: Assets.cpp  Assets.h  Comms.cpp  Comms.h  Game.cpp  Main.cpp  Player.h  RaycastGame.vcxproj  RaycastGame.vcxproj.filters  Test.cpp
RaycastGame/opengl/: glad.c  glfw3.lib
RaycastGame/opengl/glad/: glad.h
RaycastGame/x64/Debug/: RaycastGame.exe.recipe  vc143.idb
RaycastGame/x64/Release/: RaycastGame.exe.recipe  RaycastGame.iobj  RaycastGame.ipdb
RaycastGame/x64/Release/RaycastGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RaycastGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
